--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@ title: Love Light
             {% if forloop.first %}
             <h2 id="year_{{this_year}}">{{this_year}}</h2>
             <h3 id="month_{{this_year}}_{{this_month}}">{{this_month}}</h3>
-            <ul>
+            <div>
               {% endif %}
-              <ol class="breadcrumb clearfix">
-                <li><h3 style="margin-top:13px"><a class="color-title" rel="nofollow" href='{{post.url}}' target="_blank">{{ post.title }}</a></h3></li>
+              <div class="breadcrumb clearfix">
+                <div><h3 style="margin-top:13px"><a class="color-title" rel="nofollow" href='{{post.url}}' target="_blank">{{ post.title }}</a></h3></div>
                   <div class="excerpt">{{ post.excerpt }}</div>
                   <p><span class="date-artical pull-left lh30">{{ post.date | date: "%B %e , %Y" }}<a class="tags-title" href="/tag/#{{ post.tags }}-ref">{{ post.tags }}</a></span><a class="btn btn-primary pull-right" rel="nofollow" href='{{post.url}}' target="_blank">阅读全文</a></p>
-              </ol>
+              </div><hr>
               {% if forloop.last %}
-            </ul>
+            </div>
             {% else %}
             {% if this_year != next_year %}
             </ul>
