--- a/effects/index.html
+++ b/effects/index.html
@@ -4,4 +4,81 @@ title: 案例欣赏
 date: 2017-02-01 13:15:15 +0800
 ---
 
-<a href="/effects/demo/Valentine/">情人节快乐</a>
+<hr>
+<h3>Canvas</h3>
+<div class="row">
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+            <img src="/effects/images/canvas-bg5-t.png">
+            <div class="caption clearfix">
+                <h4><a class="posts-list-name" href="http://www.jq22.com/js/a6.html" target="_blank">canvas 新年快乐</a></h4>
+                <a class="btn btn-primary pull-right" href="http://www.jq22.com/js/a6.html" target="_blank">案例演示</a>
+                <button type="button" class="btn btn-default btn-xs mt12"><a href="http://www.jq22.com/js/a6.html" target="_blank"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star</a></button>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+            <img src="/effects/images/valentine-t.png" alt="Happy Valentine's day !">
+            <div class="caption clearfix">
+                <h4><a class="posts-list-name" href="/effects/demo/Valentine/" target="_blank">Happy Valentine's day !</a></h4>
+                <a class="btn btn-primary pull-right" href="/effects/demo/Valentine/" target="_blank">案例演示</a>
+                <button type="button" class="btn btn-default btn-xs mt12"><a href="http://www.jq22.com/code693" target="_blank"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star</a></button>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+            <img src="/effects/images/welcome-t.png" alt="黑客帝国片头">
+            <div class="caption clearfix">
+                <h4><a class="posts-list-name" href="/effects/demo/welcome/" target="_blank">黑客帝国(片头)</a></h4>
+                <a class="btn btn-primary pull-right" href="/effects/demo/welcome/" target="_blank">案例演示</a>
+                <button type="button" class="btn btn-default btn-xs mt12"><a href="http://www.qdfuns.com/notes/36486/6eb733a1f613a05cf933e368e65a049b.html" target="_blank"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star</a></button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+            <img src="/effects/images/canvas-bg1-t.png">
+            <div class="caption clearfix">
+                <h4><a class="posts-list-name" href="/effects/demo/canvas-bg1/" target="_blank">canvas 特效(漫延)</a></h4>
+                <a class="btn btn-primary pull-right" href="/effects/demo/canvas-bg1/" target="_blank">案例演示</a>
+                <button type="button" class="btn btn-default btn-xs mt12"><a href="http://www.jq22.com/js/a1.html" target="_blank"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star</a></button>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+            <img src="/effects/images/canvas-bg2-t.png">
+            <div class="caption clearfix">
+                <h4><a class="posts-list-name" href="/effects/demo/canvas-bg2/" target="_blank">canvas 特效(魔芋)</a></h4>
+                <a class="btn btn-primary pull-right" href="/effects/demo/canvas-bg2/" target="_blank">案例演示</a>
+                <button type="button" class="btn btn-default btn-xs mt12"><a href="http://www.jq22.com/js/a2.html" target="_blank"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star</a></button>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+            <img src="/effects/images/canvas-bg3-t.png">
+            <div class="caption clearfix">
+                <h4><a class="posts-list-name" href="/effects/demo/canvas-bg3/" target="_blank">canvas 特效(线性漫延)</a></h4>
+                <a class="btn btn-primary pull-right" href="/effects/demo/canvas-bg3/" target="_blank">案例演示</a>
+                <button type="button" class="btn btn-default btn-xs mt12"><a href="http://www.jq22.com/js/a3.html" target="_blank"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star</a></button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+            <img src="/effects/images/canvas-bg4-t.png">
+            <div class="caption clearfix">
+                <h4><a class="posts-list-name" href="/effects/demo/canvas-bg4/" target="_blank">canvas 特效(星星连线)</a></h4>
+                <a class="btn btn-primary pull-right" href="/effects/demo/canvas-bg4/" target="_blank">案例演示</a>
+                <button type="button" class="btn btn-default btn-xs mt12"><a href="http://www.jq22.com/js/a4.html" target="_blank"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star</a></button>
+            </div>
+        </div>
+    </div>
+</div>
