--- a/effects/demo/Valentine.html
+++ b/effects/demo/Valentine.html
@@ -5,9 +5,15 @@ date: 2017-02-14 13:15:15 +0800
 ---
 
 <style>
+    *{
+        margin: 0;
+        padding: 0;
+
+    }
     body{
         overflow: hidden;
-        margin: 0;
+        padding: 0;
+        font-size: 16px;
     }
     h1{
         position: fixed;
@@ -17,14 +23,8 @@ date: 2017-02-14 13:15:15 +0800
         text-align: center;
         transform:translateY(-50%);
         font-family: 'Love Ya Like A Sister', cursive;
-        font-size: 40px;
+        font-size: 2.5rem;
         color: #c70012;
-        padding: 0 20px;
-    }
-    @media (min-width:1200px){
-        h1{
-            font-size: 60px;
-        }
     }
 </style>
 <canvas></canvas>
