--- a/effects/index.html
+++ b/effects/index.html
@@ -4,7 +4,7 @@ title: 撸起袖子，看代码！
 date: 2017-02-02 13:15:15 +0800
 ---
 
-<hr>
+<hr/>
 <h3>Canvas</h3>
 <div class="row">
     <div class="col-sm-6 col-md-4">
@@ -78,6 +78,40 @@ date: 2017-02-02 13:15:15 +0800
                 <h4><a class="posts-list-name" href="/effects/demo/canvas-bg4/" target="_blank">canvas 特效(星星连线)</a></h4>
                 <a class="btn btn-primary pull-right" href="/effects/demo/canvas-bg4/" target="_blank">案例演示</a>
                 <button type="button" class="btn btn-default btn-xs mt12"><a href="http://www.jq22.com/js/a4.html" target="_blank"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star</a></button>
+            </div>
+        </div>
+    </div>
+</div>
+<hr/>
+<h3>CSS</h3>
+<div class="row">
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+            <iframe src="/effects/demo/css-shake" frameborder="0" width="100%"></iframe>
+            <div class="caption clearfix">
+                <h4><a class="posts-list-name" href="/effects/demo/css-shake" target="_blank">弹水泡泡</a></h4>
+                <a class="btn btn-primary pull-right" href="http://www.jq22.com/js/a6.html" target="_blank">案例演示</a>
+                <button type="button" class="btn btn-default btn-xs mt12"><a href="/effects/demo/css-shake" target="_blank"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star</a></button>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+            <iframe src="/effects/demo/css-search/" frameborder="0" width="100%"></iframe>
+            <div class="caption clearfix">
+                <h4><a class="posts-list-name" href="/effects/demo/css-search/" target="_blank">Search Box Hover</a></h4>
+                <a class="btn btn-primary pull-right" href="/effects/demo/css-search/" target="_blank">案例演示</a>
+                <button type="button" class="btn btn-default btn-xs mt12"><a href="/effects/demo/css-search/" target="_blank"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star</a></button>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+            <iframe src="/effects/demo/css-rotate/" frameborder="0" width="100%" scrolling="no"></iframe>
+            <div class="caption clearfix">
+                <h4><a class="posts-list-name" href="/effects/demo/css-rotate/" target="_blank">旋转的 Banner</a></h4>
+                <a class="btn btn-primary pull-right" href="/effects/demo/css-rotate/" target="_blank">案例演示</a>
+                <button type="button" class="btn btn-default btn-xs mt12"><a href="/effects/demo/css-rotate/" target="_blank"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star</a></button>
             </div>
         </div>
     </div>
