--- a/reference.html
+++ b/reference.html
@@ -42,6 +42,7 @@ permalink: /reference/
 <li><a href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript" target="_blank">MDN(JavaScript)</a></li>
 <li><a href="http://bonsaiden.github.io/JavaScript-Garden/zh/" target="_blank">JavaScript 秘密花园</a></li>
 <li><a href="https://github.com/jobbole/awesome-javascript-cn" target="_blank">JavaScript Awesome</a></li>
+<li><a href="https://leohxj.gitbooks.io/front-end-database/content/" target="_blank">前端工程师手册</a></li>
 </ol>
 <hr><h4 class="btn btn-success btn-lg">前端开发</h4><hr>
 <ol class="rounded-list">
