--- a/effects/index.html
+++ b/effects/index.html
@@ -13,7 +13,7 @@ date: 2017-02-02 13:15:15 +0800
             <div class="caption clearfix">
                 <h4><a class="posts-list-name" href="http://www.jq22.com/js/a6.html" target="_blank">canvas 新年快乐</a></h4>
                 <a class="btn btn-primary pull-right" href="http://www.jq22.com/js/a6.html" target="_blank">案例演示</a>
-                <button type="button" class="btn btn-default btn-xs mt12"><a href="http://www.jq22.com/js/a6.html" target="_blank"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star</a></button>
+                <button type="button" class="btn btn-default btn-xs mt12 share-clipboard" data-clipboard-text="http://www.jq22.com/js/a6.html"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span> Share</button>
             </div>
         </div>
     </div>
@@ -23,7 +23,7 @@ date: 2017-02-02 13:15:15 +0800
             <div class="caption clearfix">
                 <h4><a class="posts-list-name" href="/effects/demo/Valentine/" target="_blank">Happy Valentine's day !</a></h4>
                 <a class="btn btn-primary pull-right" href="/effects/demo/Valentine/" target="_blank">案例演示</a>
-                <button type="button" class="btn btn-default btn-xs mt12"><a href="http://www.jq22.com/code693" target="_blank"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star</a></button>
+                <button type="button" class="btn btn-default btn-xs mt12 share-clipboard" data-clipboard-text="http://doubleray.win/effects/demo/Valentine/"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span> Share</button>
             </div>
         </div>
     </div>
@@ -33,7 +33,7 @@ date: 2017-02-02 13:15:15 +0800
             <div class="caption clearfix">
                 <h4><a class="posts-list-name" href="/effects/demo/welcome/" target="_blank">黑客帝国(片头)</a></h4>
                 <a class="btn btn-primary pull-right" href="/effects/demo/welcome/" target="_blank">案例演示</a>
-                <button type="button" class="btn btn-default btn-xs mt12"><a href="http://www.qdfuns.com/notes/36486/6eb733a1f613a05cf933e368e65a049b.html" target="_blank"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star</a></button>
+                <button type="button" class="btn btn-default btn-xs mt12 share-clipboard" data-clipboard-text="http://doubleray.win/effects/demo/welcome/"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span> Share</button>
             </div>
         </div>
     </div>
@@ -45,7 +45,7 @@ date: 2017-02-02 13:15:15 +0800
             <div class="caption clearfix">
                 <h4><a class="posts-list-name" href="/effects/demo/canvas-bg1/" target="_blank">canvas 特效(漫延)</a></h4>
                 <a class="btn btn-primary pull-right" href="/effects/demo/canvas-bg1/" target="_blank">案例演示</a>
-                <button type="button" class="btn btn-default btn-xs mt12"><a href="http://www.jq22.com/js/a1.html" target="_blank"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star</a></button>
+                <button type="button" class="btn btn-default btn-xs mt12 share-clipboard" data-clipboard-text="http://doubleray.win/effects/demo/canvas-bg1/"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span> Share</button>
             </div>
         </div>
     </div>
@@ -55,7 +55,7 @@ date: 2017-02-02 13:15:15 +0800
             <div class="caption clearfix">
                 <h4><a class="posts-list-name" href="/effects/demo/canvas-bg2/" target="_blank">canvas 特效(魔芋)</a></h4>
                 <a class="btn btn-primary pull-right" href="/effects/demo/canvas-bg2/" target="_blank">案例演示</a>
-                <button type="button" class="btn btn-default btn-xs mt12"><a href="http://www.jq22.com/js/a2.html" target="_blank"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star</a></button>
+                <button type="button" class="btn btn-default btn-xs mt12 share-clipboard" data-clipboard-text="http://doubleray.win/effects/demo/canvas-bg2/"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span> Share</button>
             </div>
         </div>
     </div>
@@ -65,7 +65,7 @@ date: 2017-02-02 13:15:15 +0800
             <div class="caption clearfix">
                 <h4><a class="posts-list-name" href="/effects/demo/canvas-bg3/" target="_blank">canvas 特效(线性漫延)</a></h4>
                 <a class="btn btn-primary pull-right" href="/effects/demo/canvas-bg3/" target="_blank">案例演示</a>
-                <button type="button" class="btn btn-default btn-xs mt12"><a href="http://www.jq22.com/js/a3.html" target="_blank"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star</a></button>
+                <button type="button" class="btn btn-default btn-xs mt12 share-clipboard" data-clipboard-text="http://doubleray.win/effects/demo/canvas-bg3/"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span> Share</button>
             </div>
         </div>
     </div>
@@ -77,7 +77,7 @@ date: 2017-02-02 13:15:15 +0800
             <div class="caption clearfix">
                 <h4><a class="posts-list-name" href="/effects/demo/canvas-bg4/" target="_blank">canvas 特效(星星连线)</a></h4>
                 <a class="btn btn-primary pull-right" href="/effects/demo/canvas-bg4/" target="_blank">案例演示</a>
-                <button type="button" class="btn btn-default btn-xs mt12"><a href="http://www.jq22.com/js/a4.html" target="_blank"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star</a></button>
+                <button type="button" class="btn btn-default btn-xs mt12 share-clipboard" data-clipboard-text="http://doubleray.win/effects/demo/canvas-bg4/"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span> Share</button>
             </div>
         </div>
     </div>
@@ -91,7 +91,7 @@ date: 2017-02-02 13:15:15 +0800
             <div class="caption clearfix">
                 <h4><a class="posts-list-name" href="/effects/demo/css-shake" target="_blank">弹水泡泡</a></h4>
                 <a class="btn btn-primary pull-right" href="http://www.jq22.com/js/a6.html" target="_blank">案例演示</a>
-                <button type="button" class="btn btn-default btn-xs mt12"><a href="/effects/demo/css-shake" target="_blank"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star</a></button>
+                <button type="button" class="btn btn-default btn-xs mt12 share-clipboard" data-clipboard-text="http://doubleray.win/effects/demo/css-shake"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span> Share</button>
             </div>
         </div>
     </div>
@@ -101,7 +101,7 @@ date: 2017-02-02 13:15:15 +0800
             <div class="caption clearfix">
                 <h4><a class="posts-list-name" href="/effects/demo/css-search/" target="_blank">Search Box Hover</a></h4>
                 <a class="btn btn-primary pull-right" href="/effects/demo/css-search/" target="_blank">案例演示</a>
-                <button type="button" class="btn btn-default btn-xs mt12"><a href="/effects/demo/css-search/" target="_blank"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star</a></button>
+                <button type="button" class="btn btn-default btn-xs mt12 share-clipboard" data-clipboard-text="http://doubleray.win/effects/demo/css-search/"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span> Share</button>
             </div>
         </div>
     </div>
@@ -111,7 +111,7 @@ date: 2017-02-02 13:15:15 +0800
             <div class="caption clearfix">
                 <h4><a class="posts-list-name" href="/effects/demo/css-rotate/" target="_blank">旋转的 Banner</a></h4>
                 <a class="btn btn-primary pull-right" href="/effects/demo/css-rotate/" target="_blank">案例演示</a>
-                <button type="button" class="btn btn-default btn-xs mt12"><a href="/effects/demo/css-rotate/" target="_blank"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star</a></button>
+                <button type="button" class="btn btn-default btn-xs mt12 share-clipboard" data-clipboard-text="http://doubleray.win/effects/demo/css-rotate/"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span> Share</button>
             </div>
         </div>
     </div>
