--- a/effects/index.html
+++ b/effects/index.html
@@ -87,17 +87,17 @@ date: 2017-02-02 13:15:15 +0800
 <div class="row">
     <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
-            <iframe src="/effects/demo/css-shake" frameborder="0" width="100%"></iframe>
+            <iframe src="/effects/demo/css-shake" frameborder="0" width="100%" class="effect-box"></iframe>
             <div class="caption clearfix">
                 <h4><a class="posts-list-name" href="/effects/demo/css-shake" target="_blank">弹水泡泡</a></h4>
-                <a class="btn btn-primary pull-right" href="http://www.jq22.com/js/a6.html" target="_blank">案例演示</a>
+                <a class="btn btn-primary pull-right" href="/effects/demo/css-shake" target="_blank">案例演示</a>
                 <button type="button" class="btn btn-default btn-xs mt12 share-clipboard" data-clipboard-text="http://doubleray.win/effects/demo/css-shake"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span> Share</button>
             </div>
         </div>
     </div>
     <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
-            <iframe src="/effects/demo/css-search/" frameborder="0" width="100%"></iframe>
+            <iframe src="/effects/demo/css-search/" frameborder="0" width="100%" class="effect-box"></iframe>
             <div class="caption clearfix">
                 <h4><a class="posts-list-name" href="/effects/demo/css-search/" target="_blank">Search Box Hover</a></h4>
                 <a class="btn btn-primary pull-right" href="/effects/demo/css-search/" target="_blank">案例演示</a>
@@ -107,11 +107,33 @@ date: 2017-02-02 13:15:15 +0800
     </div>
     <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
-            <iframe src="/effects/demo/css-rotate/" frameborder="0" width="100%" scrolling="no"></iframe>
+            <iframe src="/effects/demo/css-rotate/" frameborder="0" width="100%"  class="effect-box" scrolling="no"></iframe>
             <div class="caption clearfix">
                 <h4><a class="posts-list-name" href="/effects/demo/css-rotate/" target="_blank">旋转的 Banner</a></h4>
                 <a class="btn btn-primary pull-right" href="/effects/demo/css-rotate/" target="_blank">案例演示</a>
                 <button type="button" class="btn btn-default btn-xs mt12 share-clipboard" data-clipboard-text="http://doubleray.win/effects/demo/css-rotate/"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span> Share</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+            <iframe src="/effects/demo/css-pic_rotate" frameborder="0" width="100%" class="effect-box"></iframe>
+            <div class="caption clearfix">
+                <h4><a class="posts-list-name" href="/effects/demo/css-pic_rotate" target="_blank">CSS3 图片翻转</a></h4>
+                <a class="btn btn-primary pull-right" href="/effects/demo/css-pic_rotate" target="_blank">案例演示</a>
+                <button type="button" class="btn btn-default btn-xs mt12 share-clipboard" data-clipboard-text="http://doubleray.win/effects/demo/css-pic_rotate"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span> Share</button>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+            <iframe src="/effects/demo/css-X_hover" frameborder="0" width="100%" class="effect-box"></iframe>
+            <div class="caption clearfix">
+                <h4><a class="posts-list-name" href="/effects/demo/css-X_hover" target="_blank">CSS3“三”变形为“X”</a></h4>
+                <a class="btn btn-primary pull-right" href="/effects/demo/css-X_hover" target="_blank">案例演示</a>
+                <button type="button" class="btn btn-default btn-xs mt12 share-clipboard" data-clipboard-text="http://doubleray.win/effects/demo/css-X_hover"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span> Share</button>
             </div>
         </div>
     </div>
