--- a/effects/index.html
+++ b/effects/index.html
@@ -19,7 +19,7 @@ date: 2017-02-02 13:15:15 +0800
     </div>
     <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
-            <img src="/effects/images/valentine-t.png" alt="Happy Valentine's day !">
+            <img src="/effects/images/canvas-valentine-t.webp" alt="Happy Valentine's day !">
             <div class="caption clearfix">
                 <h4><a class="posts-list-name" href="/effects/demo/Valentine/" target="_blank">Happy Valentine's day !</a></h4>
                 <a class="btn btn-primary pull-right" href="/effects/demo/Valentine/" target="_blank">案例演示</a>
@@ -29,7 +29,7 @@ date: 2017-02-02 13:15:15 +0800
     </div>
     <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
-            <img src="/effects/images/welcome-t.png" alt="黑客帝国片头">
+            <img src="/effects/images/canvas-welcome-t.webp" alt="黑客帝国片头">
             <div class="caption clearfix">
                 <h4><a class="posts-list-name" href="/effects/demo/welcome/" target="_blank">黑客帝国(片头)</a></h4>
                 <a class="btn btn-primary pull-right" href="/effects/demo/welcome/" target="_blank">案例演示</a>
@@ -41,7 +41,7 @@ date: 2017-02-02 13:15:15 +0800
 <div class="row">
     <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
-            <img src="/effects/images/canvas-bg1-t.png">
+            <img src="/effects/images/canvas-bg1-t.webp">
             <div class="caption clearfix">
                 <h4><a class="posts-list-name" href="/effects/demo/canvas-bg1/" target="_blank">canvas 特效(漫延)</a></h4>
                 <a class="btn btn-primary pull-right" href="/effects/demo/canvas-bg1/" target="_blank">案例演示</a>
@@ -51,7 +51,7 @@ date: 2017-02-02 13:15:15 +0800
     </div>
     <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
-            <img src="/effects/images/canvas-bg2-t.png">
+            <img src="/effects/images/canvas-bg2-t.webp">
             <div class="caption clearfix">
                 <h4><a class="posts-list-name" href="/effects/demo/canvas-bg2/" target="_blank">canvas 特效(魔芋)</a></h4>
                 <a class="btn btn-primary pull-right" href="/effects/demo/canvas-bg2/" target="_blank">案例演示</a>
@@ -61,7 +61,7 @@ date: 2017-02-02 13:15:15 +0800
     </div>
     <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
-            <img src="/effects/images/canvas-bg3-t.png">
+            <img src="/effects/images/canvas-bg3-t.webp">
             <div class="caption clearfix">
                 <h4><a class="posts-list-name" href="/effects/demo/canvas-bg3/" target="_blank">canvas 特效(线性漫延)</a></h4>
                 <a class="btn btn-primary pull-right" href="/effects/demo/canvas-bg3/" target="_blank">案例演示</a>
@@ -73,7 +73,7 @@ date: 2017-02-02 13:15:15 +0800
 <div class="row">
     <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
-            <img src="/effects/images/canvas-bg4-t.png">
+            <img src="/effects/images/canvas-bg4-t.webp">
             <div class="caption clearfix">
                 <h4><a class="posts-list-name" href="/effects/demo/canvas-bg4/" target="_blank">canvas 特效(星星连线)</a></h4>
                 <a class="btn btn-primary pull-right" href="/effects/demo/canvas-bg4/" target="_blank">案例演示</a>
