--- a/about/index.html
+++ b/about/index.html
@@ -13,6 +13,8 @@
     <meta name="author" contect="DoubleRay.Wang, DoubleRay.Wang@gmail.com">
     <meta name="robots" content="index,follow">
     <link rel="shortcut icon" href="/styles/images/favicon.ico">
+    <link rel="stylesheet" href="/about/css/reset.css">
+    <link rel="stylesheet" href="/about/css/index.css">
     <!--[if lte IE 9]>
     <script src="http://apps.bdimg.com/libs/html5shiv/3.7/html5shiv.min.js"></script>
     <![endif]-->
